--- a/rx_main_ctrl/rx_main_ctrl.vcxproj.filters
+++ b/rx_main_ctrl/rx_main_ctrl.vcxproj.filters
@@ -302,6 +302,9 @@
     <ClCompile Include="drive_ctrl.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="setup_assist.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="debug-lx.mak">
